# baseten-rust-test

./: Cargo.toml  README.md
src/: main.rs
