[package]
name = "baseten-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseten = { path = "/Users/tim/baseten-rust/baseten" }
futures = "0.3.28"
tokio = {version="1.33.0", features = ["full"]}
